--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP Canvas</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <canvas id="monCanvas" width="600" height="400">
+        Texte de remplacement pour les navigateurs ne supportant pas Canvas.
+      </canvas>
+
+      <script src="dessin.js"></script>
 </body>
 </html>
