exo1 couleur et taille aléatoires

--- a/exo1.html
+++ b/exo1.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP Canvas</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <canvas id="myCanvas" width="800" height="800">
+    <canvas id="myCanvas" width="800" height="650">
         Texte de remplacement pour les navigateurs ne supportant pas Canvas.
       </canvas>
 
