--- a/exo1.html
+++ b/exo1.html
@@ -10,6 +10,7 @@
     <canvas id="myCanvas" width="800" height="650">
         Texte de remplacement pour les navigateurs ne supportant pas Canvas.
       </canvas>
+      <button id="reset">Reset All</button>
 
       <script src="exo1.js"></script>
 </body>
